src/components/Hero/Hero.module.css
.hero {
  background-color: var(--background);
  color: var(--color);
  padding: 3.2rem 5.2rem;

  display: flex;
  gap: 6rem;
}

.heroImage {
  position: relative;
  display: inline-block;
}

.heroImage img {
  display: block;
  height: 30rem;
  width: auto;
  object-fit: cover;
  object-position: top;
}
/* 
.heroImage::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 10rem;
  background: linear-gradient(to bottom, transparent, white);
  pointer-events: none;
} */

.hero h1 {
  margin-top: 2rem;
  font-size: 4rem;
}

.hero h2 {
  margin: 0 0 2rem 0;
  font-size: 3rem;
}

.hero p span {
  color: var(--primary);
  font-weight: 600;
}

.about p {
  font-size: 1.3rem;
}

.about p,
.about h2,
.about h1,
.about button {
  opacity: 0;
  text-align: justify;
  transform: translateY(100px);
  animation: appear 1s forwards;
}

.about h1:nth-child(1) {
  animation-delay: 0;
}

.about h2:nth-child(2) {
  animation-delay: 200ms;
}

.about p:nth-child(3) {
  animation-delay: 400ms;
}

.about p:nth-child(4) {
  margin-top: 1.5rem;
  animation-delay: 600ms;
}

.about button {
  font-size: 1.3rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  text-transform: uppercase;
  margin: 2rem 0 0 29.5rem;
  border-radius: 12px;
  padding: 1rem 3rem;
  border: none;
  color: white;
  background-image: linear-gradient(
    110deg,
    #6442d5 0%,
    #a855c8 50%,
    #bd2e8f 100%
  );
  cursor: pointer;
  animation-delay: 800ms;
}

@keyframes appear {
  100% {
    transform: translateX(0) translateY(0);
    opacity: 1;
  }
}

